<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_profile">
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.moviesapp.ui.view.ProfileFragment"
        android:label="@string/navigation_title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_movies"
        android:name="com.example.moviesapp.ui.view.MoviesFragment"
        android:label="@string/navigation_title_movies"
        tools:layout="@layout/fragment_movies" />
    <fragment
        android:id="@+id/nav_images"
        android:name="com.example.moviesapp.ui.view.ImagesFragment"
        android:label="@string/navigation_title_images"
        tools:layout="@layout/fragment_images" />
</navigation>
