<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.view.ProfileFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profileImageCardView"
        android:layout_width="160dp"
        android:layout_height="280dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:elevation="1dp"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/profileImageView_content_description" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/profileNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:text="@string/profileNameTextView_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/profileImageCardView"
        app:layout_constraintTop_toTopOf="@id/profileImageCardView" />

    <TextView
        android:id="@+id/roleTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/roleTitleTextView_text"
        app:layout_constraintStart_toStartOf="@id/profileNameTextView"
        app:layout_constraintTop_toBottomOf="@id/profileNameTextView" />

    <TextView
        android:id="@+id/roleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/roleTextView_text"
        app:layout_constraintStart_toStartOf="@id/roleTitleTextView"
        app:layout_constraintTop_toBottomOf="@id/roleTitleTextView" />

    <TextView
        android:id="@+id/popularityTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:text="@string/popularityTitleTextView_text"
        app:layout_constraintStart_toEndOf="@id/roleTitleTextView"
        app:layout_constraintTop_toTopOf="@id/roleTitleTextView" />

    <TextView
        android:id="@+id/popularityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movieScoreTitleTextView_text"
        app:layout_constraintStart_toStartOf="@id/popularityTitleTextView"
        app:layout_constraintTop_toTopOf="@id/roleTextView" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/profileMaterialDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileImageCardView" />

    <TextView
        android:id="@+id/bestKnownForPreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/bestKnownForPreTextView_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileMaterialDivider" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bestKnownForCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bestKnownForPreTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/bestKnownForNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/movieNameTextView_text"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bestKnownForDescriptionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/bestKnownForDescriptionTextView_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bestKnownForNameTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
