<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_gray">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/itemMovieTextCardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/itemMovieTextCardView_width_margins"
        android:layout_marginTop="@dimen/itemMovieTextCardView_height_margins"
        android:layout_marginEnd="@dimen/itemMovieTextCardView_width_margins"
        android:layout_marginBottom="@dimen/itemMovieTextCardView_height_margins"
        app:cardBackgroundColor="@color/light_aqua"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/movieNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/movieNameTextView_text"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movieOverviewTextView"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="@dimen/zero_dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/movieOverviewTextView_text"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@id/movieScoreTitleTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/movieNameTextView"
                app:layout_constraintTop_toBottomOf="@id/movieNameTextView"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/movieScoreTitleTextView"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/movieScoreTitleTextView_text"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/movieNameTextView" />

            <TextView
                android:id="@+id/movieScoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/movieScoreTextView_text"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/movieScoreTitleTextView"
                app:layout_constraintTop_toTopOf="@+id/movieScoreTitleTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/itemMoviesImageCardView"
        android:layout_width="100dp"
        android:layout_height="160dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/itemMoviesImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/itemMoviesImageView_content_description" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
